# xndr

./: .gitignore  CHANGELOG.md  LICENSE  README.md  default.nix  shell.nix  xndr.cabal
app/: Main.hs
src/: Prelude.hs  Xndr.hs
test/: XndrTest.hs
test/Test/: Prelude.hs  Support.hs
