name:                xndr
version:             0.1.0.0
synopsis:            A priority queue for humans.
-- description:
homepage:            github.com/Camsbury/xndr
license:             MIT
license-file:        LICENSE
author:              Cameron Kingsbury
maintainer:          camsbury7@gmail.com
-- copyright:
category:            Productivity
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  -- other-extensions:
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:
                  Prelude
                  Xndr
  -- other-modules:
  default-extensions:
                     DerivingStrategies
                     FlexibleContexts
                     FlexibleInstances
                     FunctionalDependencies
                     LambdaCase
                     NoImplicitPrelude
                     OverloadedLists
                     OverloadedStrings
                     ScopedTypeVariables
                     TupleSections
                     TypeApplications
  build-depends:       base-noprelude >=4.10 && <4.12
                     , classy-prelude

executable xndr
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  hs-source-dirs:      app
  default-language:    Haskell2010
  build-depends:       base-noprelude >=4.10 && <4.12
                     , classy-prelude
                     , xndr

test-suite xndr-tests
  main-is:             Main.hs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  default-language:    Haskell2010
  default-extensions:
                     DerivingStrategies
                     FlexibleContexts
                     FlexibleInstances
                     FunctionalDependencies
                     NoImplicitPrelude
                     OverloadedStrings
                     OverloadedLists
                     ScopedTypeVariables
                     TypeApplications
                     TupleSections
  build-depends:       base-noprelude >=4.10 && <4.12
                     , classy-prelude
                     , xndr
                     , hedgehog
                     , tasty
                     , tasty-discover
                     , tasty-hedgehog